--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to 'App Catalog', root_path, class: "navbar-brand" %>
+          <%= link_to "App Catalog", root_path, class: "navbar-brand" %>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -40,7 +40,9 @@
           </form>
         </div><!-- /.navbar-collapse -->
     </nav>
-
+    <% flash.each do |name, msg| -%>
+        <%= content_tag :div, msg, class: "alert alert-#{name}" %>
+    <% end -%>
     <%= yield %>
 
 
