Working on the search functaionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,13 +33,15 @@
         			<% end %></li>
           </ul>
           <form class="navbar-form navbar-right" role="search">
-            <div class="form-group">
-              <%= search_form_for @q do |f| %>
-              <input type="text" class="form-control" placeholder="Search (eg. PHIS)" <%= f.search_field :title_or_acronym_cont %>
-            </div>
-            <%= f.button "Search", :class => "btn btn-large btn-primary" %>
-              <% end %>
-          </form>
+        <div class="form-group">
+          <%= search_form_for @q, url: search_apps_path, html: { method: :post } do |f| %>
+          <input type="text" class="form-control" placeholder="Search for..."
+          <%= f.search_field :title_or_acronym_or_prog_lang_1_or_framework_1_or_tech_stack_1_or_tech_stack_2_or_tech_stack_3_or_tech_stack_4_or_tech_stack_5_or_tech_stack_6_cont %>
+        </div>
+        <%= button_to('Search!', search_apps_path, :class => 'btn btn-large btn-primary')  %>
+        <% end %>
+      </form>
+
         </div><!-- /.navbar-collapse -->
     </nav>
     <% flash.each do |name, msg| -%>
