--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,4 +1,10 @@
-<h1>Application Index</h1>
+<div class="row">
+  <div class="col-lg-6">
+    <h1>Application Index</h1>
+  </div>
+
+  </div>
+
 <div class="table-responsive">
 <table class="table table-hover">
   <thead>
