Disabled Search Functionality for non-root

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,15 +32,17 @@
               <li><%= link_to 'Sign up', new_user_registration_path %></li>
         			<% end %></li>
           </ul>
+          <% if current_page?(root_path) %>
           <form class="navbar-form navbar-right" role="search">
-        <div class="form-group">
-          <%= search_form_for @q, url: search_apps_path, html: { method: :post } do |f| %>
-          <input type="text" class="form-control" placeholder="Search for..."
-          <%= f.search_field :title_or_acronym_or_prog_lang_1_or_framework_1_or_tech_stack_1_or_tech_stack_2_or_tech_stack_3_or_tech_stack_4_or_tech_stack_5_or_tech_stack_6_cont %>
-        </div>
-        <%= button_to('Search!', apps_path(@app), :class => 'btn btn-large btn-primary')  %>
-        <% end %>
-      </form>
+            <div class="form-group">
+              <%= search_form_for @q, url: apps_path, html: { method: :post } do |f| %>
+              <input type="text" class="form-control" placeholder="Search for..."
+              <%= f.search_field :title_or_acronym_or_prog_lang_1_or_framework_1_or_tech_stack_1_or_tech_stack_2_or_tech_stack_3_or_tech_stack_4_or_tech_stack_5_or_tech_stack_6_cont %>
+            </div>
+            <%= f.submit('Search!', :class => 'btn btn-large btn-primary')  %>
+            <% end %>
+          </form>
+          <% end %>
 
         </div><!-- /.navbar-collapse -->
     </nav>
