--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -1,3 +1,8 @@
+<% if ((@app.prog_lang_eol_1- Date.today) < @year1) || ((@app.framework_eol_1- Date.today) < @year1) || ((@app.tech_stack_eol_1 - Date.today) < @year1) || ((@app.tech_stack_eol_2 - Date.today) < @year1) || ((@app.tech_stack_eol_3 - Date.today) < @year1) || ((@app.tech_stack_eol_4 - Date.today) < @year1) %>
+  <% ((@app.tech_stack_eol_5 - Date.today) < @year1) || ((@app.tech_stack_eol_6 - Date.today) < @year1) %>
+<% flash[:danger] = 'This app is in TECHNICAL RISK! Review Technology Stack.'  %>
+<% end %>
+
 <%= link_to 'Edit', edit_app_path(@app) %> |
 <%= link_to 'Back', apps_path %>
 <div class="panel panel-primary">
