Added Chartkick and Highcharts for dashboard view

--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -4,6 +4,8 @@
   </div>
   <div class="row"><!-- row 1 -->
     <div class="col-lg-4">
+      <%= pie_chart App.group(:prog_lang_1).count %>
+      <h4 class="chart-title">Programming Languages</h4>
     </div>
   </div><!-- row 1 -->
 </div><!-- row header -->
